--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <!-- 添加这个标签用于其他移动设备 -->
   <meta name="mobile-web-app-capable" content="yes">
-  <title>Vite + Vue + TS</title>
+  <title>Unimall</title>
 </head>
 
 <body>
